typescript/checker/tests/conformance/Symbols/ES5SymbolProperty4.ts.stderr
error: NoSuchVar {
    span: Span {
        lo: BytePos(
            69,
        ),
        hi: BytePos(
            75,
        ),
        ctxt: #0,
    },
    name: Atom('Symbol' type=static),
}
 --> $DIR/tests/conformance/Symbols/ES5SymbolProperty4.ts:5:6
  |
5 |     [Symbol.iterator]() { }
  |      ^^^^^^

